--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "front",
-  "version": "0.0.0",
+  "name": "bot-race-front",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
