--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "start": "npm start -w front",
-    "clean:front": "rm -Rf front/node_modules node_modules",
     "build:front": "npm run build -w front",
     "test:front": "npm run test -w front"
   },
   "workspaces": [
-    "front"
+    "front",
+    "back",
+    "presentation"
   ]
 }
