--- a/presentation/package.json
+++ b/presentation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylex-presentation",
+  "name": "bot-race-slides",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
