--- a/back/package.json
+++ b/back/package.json
@@ -29,7 +29,8 @@
     "install": "^0.13.0",
     "npm": "^10.8.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
